Fix category list link color contrast

--- a/indico/web/client/styles/design_system/variables.scss
+++ b/indico/web/client/styles/design_system/variables.scss
@@ -24,7 +24,7 @@ body {
   --border-default-color: #5a5a5a;
   --border-disabled-color: #c4c4c4;
   --accent-color: #0075a3;
-  --accent-secondary-color: #b35905; // XXX: min font size 1.2rem or 1rem bold (or solid icon)
+  --accent-secondary-color: #aa5302; // XXX: min font size 1.2rem or 1rem bold (or solid icon)
   --accent-highlight-color: #035e81;
   --accent-border-color: #05425b;
   --active-color: #db1a1a;
